More preprocessing and normalization

--- a/notebooks/single-cell-analysis.ipynb
+++ b/notebooks/single-cell-analysis.ipynb
@@ -1059,20 +1059,101 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "2b6a2970",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Other Pre-processing"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "8f6b69fa",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>MT-ND1</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MT-ND2</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MT-CO1</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MT-CO2</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MT-ATP8</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MT-ATP6</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MT-CO3</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MT-ND3</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MT-ND4L</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MT-ND4</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MT-ND5</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MT-ND6</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MT-CYB</th>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: []\n",
+       "Index: [MT-ND1, MT-ND2, MT-CO1, MT-CO2, MT-ATP8, MT-ATP6, MT-CO3, MT-ND3, MT-ND4L, MT-ND4, MT-ND5, MT-ND6, MT-CYB]"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Display mitochondrial genes, which in humans almost always start with capital \"MT-\" (can differ for other species)\n",
+    "adata.var[adata.var.index.str.startswith(\"MT-\")]"
+   ]
   },
   {
    "cell_type": "code",
